--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H8QBBRRB3R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H8QBBRRB3R');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PixelView - Peliculas y series gratis</title>
@@ -56,6 +67,7 @@
             <button class="genre-button" data-genre="comedia">Comedia</button>
             <button class="genre-button" data-genre="drama">Drama</button>
             <button class="genre-button" data-genre="terror">Terror</button>
+            <button class="genre-button" data-genre="accion">Accion</button>
         </div>
 
         <!-- Lista de videos -->
